# cow-amm-trade-envy

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bcow_helper.py  config.yaml  constants.py  cow_amm_missed_surplus.csv  dune_sync_config.yaml  main.py  missed_surplus.py  models.py  pyproject.toml  requirements.txt  trade_envy_report.ipynb  workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: github-packages-publish.yaml
data/: cow_amm_missed_surplus.csv  cow_amm_ucp.csv
outputs/: trade_envy_report.html
queries/: dune.sql
src/cow_amm_trade_envy/: bcow_helper.py  configs.py  constants.py  create_test_datasets.py  datasources.py  db_utils.py  envy_calculation.py  main.py  missed_surplus.py  models.py  query_dune.py  render_report.py
src/cow_amm_trade_envy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cow_amm_trade_envy/assets/: assets.py
src/cow_amm_trade_envy/jobs/: calculate_envy_job.py
src/cow_amm_trade_envy/repositories/: repo.py
src/cow_amm_trade_envy/schedules/: weekly_schedule.py
tests/: test_envy_calculation.py  test_main.py
